--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <Title> Home Page </title>
+  <Title> 
+    Home Page 
+    <script src="p5.js"> </script>
+  </title>
 </head>
 <body>
   <h1> Hello World </h1>
+  <script id="script" type="text/javascript">
 </body>
 </html>
