--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <Title> 
-    Home Page 
-    <script src="p5.js"> </script>
+    Home Page
   </title>
+<script src="p5.js"> </script>
+<script src="/scriptGame.js" defer></script>
 </head>
 <body>
   <h1> Hello World </h1>
